# remote-coder

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN_NOTES.md  README.md  SECURITY.md  pyproject.toml
config/: agents.yaml  projects.yaml.example
docs/: cloud-vm-setup.md  usage-philosophy.md
plans/: README.md
scripts/: copy_configs.sh
src/: __init__.py  __main__.py  chat_adapter.rs  config.py  config.rs  error.rs  main.py  main.rs  models.py  models.rs  router.py  session_manager.py  session_manager.rs
src/agent_adapters/: __init__.py  base.py  claude_adapter.py  codex_adapter.py  gemini_adapter.py
src/agents/: __init__.py  agent_process.py  process_manager.py
src/chat_adapters/: i_chat_adapter.py  slack_adapter.py
src/commands/: __init__.py  config_agents.py  config_github.py  config_projects.py  config_slack.py  init.py  utils.py  validators.py
src/core/: __init__.py  agent_runner.py  command_parser.py  config.py  conversation_summarizer.py  errors.py  git_workflow.py  model_mapping.py  models.py  project_creation.py  router.py  session_manager.py
src/github/: __init__.py  client.py
tests/: __init__.py  test_command_parser.py  test_context_builder.py  test_conversation_summarizer.py  test_interaction_classifier.py  test_project_creation.py  test_router_integration.py  test_router_reactions.py  test_session_manager_interactions.py
tests/commands/: conftest.py  test_catalog_commands.py  test_dispatcher.py  test_maintenance_commands.py  test_review_commands.py  test_session_commands.py
(+14 files in other folders)
