[package]
name = "cockpit-coder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cockpit-coder"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
dotenv = "0.15"

# These will be added in later passes
# slack-morphism = "2.16"
# regex = "1.10"
# octocrab = "0.47"
# futures = "0.3"

[dev-dependencies]
tempfile = "3.8"
